Bug 372074 - cantor/octave: calling quit() and then stopping calculation crashes whole desktop
Summary: cantor/octave: calling quit() and then stopping calculation crashes whole des...
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: octave-backend (other bugs)
Version First Reported In: 16.04
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: Miha Čančula
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-04 14:09 UTC by Erik Quaeghebeur
Modified: 2018-05-07 20:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.04.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Erik Quaeghebeur 2016-11-04 14:09:08 UTC
Using the octave backend: when calling `quit()`, cantor keeps on ‘calculating’. Then, when stopping the calculation (clicking the red circle with a cross), the whole desktop crashes. First, all window decorations disappear and an X-styled message window appears (and some windowless password dialogues appear as well, but I think that is not important). The message window says that the ksmserver could not be (re?)started. When clicking that message window's close button, I get thrown back to the login screen.

This repeats every time one is stupid enough to try and call quit().
Comment 1 Erik Quaeghebeur 2016-11-22 14:25:34 UTC
I had the same type of crash with the Qt5 GUI included with Octave 4.2.0. Perhaps that means the issue is with Octave, or perhaps a similar bug is present there as well:

https://savannah.gnu.org/bugs/?func=detailitem&item_id=49609
Comment 2 Nikita Sirgienko 2018-04-28 20:19:45 UTC
Git commit 4681dc925f090228ddee58de9afaa9b9e5c1749e by Nikita Sirgienko.
Committed on 28/04/2018 at 20:19.
Pushed by sirgienko into branch 'master'.

Avoid octave backend crushing, when we try to kill ended process

Summary:
Now octave backend don't crash, but we still need to interrupt `quit` entry and restart backend.
FIXED-IN: 18.04.1

Reviewers: #cantor, asemke

Reviewed By: #cantor, asemke

Subscribers: #cantor, #kde_edu

Tags: #kde_edu, #cantor

Differential Revision: https://phabricator.kde.org/D12567

M  +5    -2    src/backends/octave/octavesession.cpp

https://commits.kde.org/cantor/4681dc925f090228ddee58de9afaa9b9e5c1749e
Comment 3 Alexander Semke 2018-05-07 20:45:25 UTC
Git commit 1ffa0816e1daacfadd7723bba75cead53492b7fb by Alexander Semke, on behalf of Nikita Sirgienko.
Committed on 07/05/2018 at 20:45.
Pushed by asemke into branch 'Applications/18.04'.

Avoid octave backend crushing, when we try to kill ended process

Summary:
Now octave backend don't crash, but we still need to interrupt `quit` entry and restart backend.
FIXED-IN: 18.04.1

Reviewers: #cantor, asemke

Reviewed By: #cantor, asemke

Subscribers: #cantor, #kde_edu

Tags: #kde_edu, #cantor

Differential Revision: https://phabricator.kde.org/D12567

M  +5    -2    src/backends/octave/octavesession.cpp

https://commits.kde.org/cantor/1ffa0816e1daacfadd7723bba75cead53492b7fb