Avoid octave backend crushing, when we try to kill ended process

Summary:
Now octave backend don't crash, but we still need to interrupt `quit` entry and restart backend.
BUG: 372074
FIXED-IN: 18.04.1

Reviewers: #cantor, asemke

Reviewed By: #cantor, asemke

Subscribers: #cantor, #kde_edu

Tags: #kde_edu, #cantor

Differential Revision: https://phabricator.kde.org/D12567